examples/test/testpolicy8003.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8003
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key26: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value13
      podSelector:
        matchLabels:
          key43: value46
          key35: value9
          key29: value23
